<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipeToRefresh">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.ScreenOneFragment"
        android:background="@drawable/img">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="56dp"
            android:scaleY="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="56dp"
            android:maxEms="10"
            android:maxLines="2"
            android:text="@string/welcome_what_are_you_looking_for"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/leadGeneration_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="56dp"
            android:text="@string/lead_generation_bots"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.564"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multistep_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="56dp"
            android:text="@string/multi_step_forms"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leadGeneration_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/integrations_btn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="56dp"
            android:text="@string/integrations"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multistep_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>